--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,2 @@
-name: Build Android release APK when create new tag
-uses: kyze8439690/action-release-releaseapk@1.0.0
+- name: Release APK Publisher
+  uses: nightcrawler-/action-release-apk@1.0.2
